# serverlessmania

./: .gitignore  README.md  brika.js  package.json  pull_request_template.md  pyproject.toml  requirements.txt  tailwind.config.js
components/: Footer.js
data/: siteMetadata.js
data/authors/: default.md
data/blog/: deriving-ols-estimator.mdx  introducing-tailwind-nextjs-starter-blog.mdx
pages/: _document.js
