[tool.poetry]
name = "serverlessmania"
version = "0.1.0"
description = "A powerful development agent designed to streamline the creation and deployment of native serverless applications on AWS. It simplifies the development process by providing intelligent assistance throughout the entire lifecycle of your serverless application."
authors = ["ZE <zerubeus@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.0"
botocore = "^1.29.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
jsonschema = "^4.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"
